Fix spacing in feed description

--- a/app/assets/stylesheets/api/feed.css
+++ b/app/assets/stylesheets/api/feed.css
@@ -138,7 +138,7 @@
   font-size: 24px;
   font-weight: normal;
   color: white;
-  max-width: 470px;
+  max-width: 340px;
 }
 
 .group-of-two .feedItem .author {
